eglibc (2.13-37) UNRELEASED; urgency=low

  [ Aurelien Jarno ]
  * debhelper.in/locales.postinst: correctly lookup for the locales-all
    package.  Closes: #692777.

  [ Jonathan Nieder ]
  * control.in/opt: remove outdated reference to 2.6 kernel from
    description of i686 variant.  Thanks to Regid Ichira.  Closes:
    #692154.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 26 Oct 2012 19:26:34 +0200

eglibc (2.13-36) unstable; urgency=low

  [ Aurelien Jarno ]
  * patches/any/cvs-strtod-overflow.diff: new patch from upstream to fix
    an integer/buffer overflow in strtod() (CVE-2012-3480).  Closes: 
    #684889.
  * patches/kfreebsd/local-getaddrinfo-freebsd-kernel.diff: new patch to
    fix getaddrinfo() when service = 0 on a FreeBSD kernel with DNS
    server returning IPv6, but without IPv6 connection.  Closes: #690021.
  * sysdeps/linux.mk: fix kernel version parsing with only two numbers.
  * patches/any/cvs-arch-lowlevellock.diff: new patch from upstream to
    fix futexes atomic issue on ARM and SPARC.  Closes: #691173.
  * local/manpages/ldconfig.8: fix wrong description of ld.so.conf format.
    Closes: #684682.

  [ Samuel Thibault ]
  * libc0.3.symbols.hurd-i386: Add missing *_exec_file_name symbols.
  * patches/hurd-i386/unsubmitted-gnumach.defs.diff: New patch to build stubs
    for new gnumach.defs.
  * libc0.3.symbols.hurd-i386: Add new gnumach.defs stubs symbols.
  * control: build-depend on gnumach-dev that provides gnumach.defs.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 26 Oct 2012 14:28:06 +0000

eglibc (2.13-35) unstable; urgency=low

  [ Aurelien Jarno ]
  * patches/arm/unsubmitted-ldconfig-cache-abi.diff: disable, as it will 
    conflict with upstream x32 support.
  * Update Czech debconf translation, by Miroslav Kure.  Closes: #681708.
  * local/manpages/ld.so.8: fix LD_VERBOSE description after manpage
    rework.  Closes: #681688.
  * patches/any/cvs-vfprintf-positional.diff: new patch from upstream to